--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ h1 {
     text-align: center;
     color: rgb(255, 255, 255);
     margin-top: 60px;
+
     font-size: 2.3em;
     background-color: yellowgreen;
     padding: 7px;
@@ -32,7 +33,7 @@ body {
 
 ul.item-list {
     display: flex;
-    justify-content:space-around;
+    justify-content:center;
     align-items: center;
     flex-wrap: wrap;
 }
@@ -44,10 +45,36 @@ ul.item-list li {
     display: flex;
     align-items: center;
     background-color: white;
-
+    position: relative;
 }
 
 img {
     width: 100%;
+    padding: 5px;
+
 }
 
+ul.item-list li .cap{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(28, 168, 0, 0.561);
+    visibility: hidden;
+    opacity: 0;
+    transition-property: opacity, visibility;
+    transition-duration: 0.5s, 0.5s;
+    transition-timing-function: ease-in-out;
+    color: white;
+    font-size: 20px;
+    text-align: center;
+
+}
+
+.item-list li:hover>.cap {
+    opacity: 1;
+    visibility: visible;
+}
