--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,8 @@ h2 {
     color: rgb(255, 255, 255);
     margin: 30px;
     font-size: 2em;
+    letter-spacing: 2.5px;
+    text-transform: uppercase;
 }
 
 body {
@@ -107,6 +109,7 @@ ul.item-list li .cap{
     color: white;
     font-size: 20px;
     text-align: center;
+    text-transform: capitalize;
 
 }
 
